--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,10 @@ layout: default
               {{ content }}
             </article>
           <hr>
-          <blockquote><p>对于本文内容有问题或建议的小伙伴，请在github中联系我。</p></blockquote>
+          <blockquote><p>对于本文内容有问题或建议的小伙伴，欢迎在文章底部留言交流讨论。</p></blockquote>
+          <div class="text-center">
+            <a href="{{ '/donate/' | prepend: site.baseurl }}" target="_blank" style="text-decoration: none"><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-usd" aria-hidden="true"></span> 您的支持是将是我写作最大的动力!</button></a>
+          </div>
         </div>
       </div>
       <!--comment-->
@@ -49,7 +52,6 @@ layout: default
         </article>
       </div> -->
       <!--Gitment-->
-      <!-- 删除评论功能>
       <div id="container"></div>
       <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
       <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
@@ -65,7 +67,7 @@ layout: default
         })
         gitment.render('container')
       </script>
-      <!-->
+      
     </div>
   </div>
 </div>
