--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -52,7 +52,7 @@
 <script>
 var gitment = new Gitment({
   id: 'demo page', // 可选。默认为 location.href
-  owner: '15521135',
+  owner: 'jungleg',
   repo: 'gitment',// repo存储评论
   oauth: {
     client_id: 'f16f37f38df5bed429c5',
